--- a/MercadOn/MercadOn/Content/StylePaginaProdutos/index.html
+++ b/MercadOn/MercadOn/Content/StylePaginaProdutos/index.html
@@ -23,27 +23,33 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
+      <a class="navbar-brand" href="#">Nossa LOGO aqui</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Home
-              <span class="sr-only">(current)</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
+          <ul class="navbar-nav ml-auto">
+              <input type="text" name="input" value="Digite o produto" >
+
+              <button class="nav-item">
+                  <a class="nav-link" href="#" style="color: black">Buscar</a>
+              </button>
+              <li class="nav-item active">
+                  <a class="nav-link" href="#">
+                      Home
+                      <span class="sr-only">(current)</span>
+                  </a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Carrinho</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Minha conta</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="#">Sair</a>
+              </li>
+          </ul>
       </div>
     </div>
   </nav>
@@ -54,9 +60,11 @@
     <div class="row">
 
       <div class="col-lg-3">
-        <div id="Logo" 
-             <span><img src="C:\Users\Aluno\Downloads\startbootstrap-shop-homepage-gh-pages\logo-login.png" width="200" height="200" /></span>
-             </div>
+        <div id="Logo" >
+             <span>
+                <img src="logo-login.png" width="200" height="200" />
+             </span>
+         </div>
         <h1 class="my-4">Shop Name</h1>
         <div class="list-group">
           <a href="#" class="list-group-item"> Higiene Pessoal</a>
